# CodeEvolve

experiments/tig_knapsack_test/: config_mp_insp.yaml
problems/alphaevolve_math_problems/circle_packing_square/26/configs/: config_gemini_simple.yaml
problems/tig_problems/: README.md
problems/tig_problems/tig_knapsack/c003-runner/: Cargo.toml
problems/tig_problems/tig_knapsack/c003-runner/src/: main.rs
science-codeevolve/experiments/test_run/: config_test.yaml
science-codeevolve/experiments/test_run/0/: best_prompt.txt
science-codeevolve/experiments/test_run/0/ckpt/: ckpt_1.pkl  ckpt_2.pkl  ckpt_3.pkl
science-codeevolve/experiments/tig_knapsack_test/0/: best_sol.rs
science-codeevolve/experiments/tig_knapsack_test/0/ckpt/: ckpt_5.pkl
science-codeevolve/problems/alphaevolve_math_problems/circle_packing_square/26/configs/: config_test.yaml
science-codeevolve/problems/tig_problems/tig_knapsack/configs/: config_insp.yaml  config_mp.yaml  config_mp_insp.yaml  config_no_evolve.yaml  config_no_mp_or_insp.yaml
science-codeevolve/problems/tig_problems/tig_knapsack/input/: build_algorithm.py  evaluate.py  test_algorithm.py
src/codeevolve/: lm.py
tig-monorepo/: Cargo.toml
tig-monorepo/openevolve-play/: Cargo.toml
tig-monorepo/openevolve-play/src/: main.rs
tig-monorepo/tig-algorithms/: Cargo.toml
tig-monorepo/tig-algorithms/src/knapsack/: mod.rs
tig-monorepo/tig-algorithms/src/knapsack/openevolve_candidate/: README.md  mod.rs
tig-monorepo/tig-challenges/src/: knapsack.rs
(+2 files in other folders)
